src/app/custom-styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}
/* --xl-breakpoint: 1280px; */
:root {
  --background: #e7f2f5;
  --card-background: #fbfbfb;
  --blue-cool-80: #14333d;
  --blue-cool-70: #224a58;
  --foreground: #171717;
  --header-teal: #224a58;
  --background-light-blue: #dcecf3;
  --background-dark-blue: #0e1e25;
  --ifm-color-primary: #2e8555;
  font-size: 16px; /* base value for rem */
}

html,
body {
  background: var(--background);
  font-family: 'Source Sans Pro', sans-serif;
}
.main-content {
  background: var(--background);
}

.usa-logo a {
  color: #ffffff;
}

.bg-background-teal {
  background-color: var(--header-teal);
}

.bg-background-dark-blue {
  background-color: var(--background-dark-blue);
}

@media (min-width: 64em) {
  .usa-logo {
    margin-top: 2rem;
    margin-bottom: 2rem;
  }
}

.height-100 {
  height: 100%;
}

.flex-vertical-center {
  display: flex;
  align-items: center !important;
  vertical-align: center;
  height: auto;
}

.flex-center {
  text-align: center;
}

.usa-section--light-blue {
  background-color: var(--background-light-blue);
}

h1 {
  color: #224a58;
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 3.125rem;
  text-align: left;
  font-family: 'Merriweather', serif;
}

h2 {
  color: var(--blue-cool-80);
  font-family: 'Public Sans', sans-serif;
  font-size: 2rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

h3 {
  color: var(--blue-cool-80);
  font-family: 'Public Sans', sans-serif;
  font-weight: 700;
  font-size: 1.38rem;
  line-height: 1.69rem;
}

h4 {
  color: var(--blue-cool-80);
  font-family: 'Public Sans';
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 140%; /* 1.4rem */
}

ul {
  margin-bottom: 1em;
  margin-top: 1em;
  line-height: 1.5;
  padding-left: 3ch;
  list-style: disc;
}
ul:last-child {
  margin-bottom: 0;
}
ul,
ol {
  margin-top: 0.25em;
}
ul li {
  margin-bottom: 0.25em;
  max-width: 68ex;
}
ul li:last-child {
  margin-bottom: 0;
}

p {
  color: var(--blue-cool-70);
  font-family: 'Public Sans', sans-serif;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

main:has(.hide-footer-bar) ~ .footer-bar::before {
  display: none !important;
}

main:has(.hide-footer-bar) ~ .footer-bar {
  display: none !important;
}

